css assessment5 rectified

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="background">
         <div class="heading">
-            <p>Different Shapes Transformation</p>
+            <p>Different Shape's Transformation</p>
         </div>
     
         <div class="shape-container">
