--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
 <body>
     <div class="background">
         <div class="heading">
-            <p>Another Different Shapes Transformation</p>
+            <p>Another Different Shape's Transformation</p>
         </div>
     
         <div class="container">
